fix visible alt and delete-icon

--- a/blocks/elements/__image/elements__image.css
+++ b/blocks/elements/__image/elements__image.css
@@ -3,7 +3,7 @@
   overflow: hidden;
   object-fit: cover;
   object-position: center;
-  background-color: transparent;
+  background-color: lightgray;
   height: 100%;
   width: 100%;
   }
